--- a/src/app/post-list-component/post-list-component.component.html
+++ b/src/app/post-list-component/post-list-component.component.html
@@ -5,9 +5,11 @@
 
 <ul class="list-group">
   <app-post-list-item-component *ngFor="let post of posts"  [post]="post"></app-post-list-item-component>
-
-
-
 </ul>
-  
+  <div class="spacer">
+    <button class="btn btn-primary sm-spacer" (click)="savePosts()">Sauvegarder les posts</button>
+    <button class="btn btn-primary sm-spacer"(click)="downloadPosts()">Télécharger les posts</button>
+    
+
+  </div>
 </div>
