--- a/src/app/post-list-item-component/post-list-item-component.component.html
+++ b/src/app/post-list-item-component/post-list-item-component.component.html
@@ -1,7 +1,7 @@
 <li class="list-group-item item" 
   [ngClass]="{
-    'list-group-item-success': isLove(),
-    'list-group-item-danger':!isLove()
+    'list-group-item-success': isLoved(),
+    'list-group-item-danger':isNotLoved()
   }">
   <div class="date">{{post.created_at | date : 'dd/MM/yyyy, hh:mm aa'}}</div>
   <div class="titre">{{post.title}}</div>
@@ -10,5 +10,6 @@
   <div>
     <button class="btn btn-primary bouton" (click)="onLoveClick()">Love it</button>
     <button class="btn btn-danger bouton" (click)="onDontLoveClick()">Don't love it</button>
+    <button class="btn btn-danger bouton float-right" (click)="onSupprimer()">Supprimer le post</button>
   </div>
 </li>
