--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,9 @@
 /* You can add global styles to this file, and also import other style files */
+.spacer{
+    margin : 30px;
+}
+
+.sm-spacer{
+    margin : 10px;
+}
+
