Resolution bug date dans firebase

--- a/src/app/post-list-item-component/post-list-item-component.component.html
+++ b/src/app/post-list-item-component/post-list-item-component.component.html
@@ -3,7 +3,7 @@
     'list-group-item-success': isLoved(),
     'list-group-item-danger':isNotLoved()
   }">
-  <div class="date">{{post.created_at | date : 'dd/MM/yyyy, hh:mm aa'}}</div>
+  <div class="date">{{post.created_at }}</div>
   <div class="titre">{{post.title}}</div>
   <div class="content">{{post.content}}</div>
 
